argocd/manifests/mealie-ringtail/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-tailscale
  namespace: mealie
  annotations:
    tailscale.com/proxy-class: "default"
    tailscale.com/proxy-group: "ingress"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Mealie"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "mealie.png"
    gethomepage.dev/description: "Recipe manager"
    gethomepage.dev/href: "https://meals.ops.eblu.me"
    gethomepage.dev/pod-selector: "app=mealie"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: mealie
      port:
        number: 9000
  tls:
    - hosts:
        - meals
